# PhD_python_scripts

./: README.md  givens_predictor.pt  seen.json
Arduino_FFT/: arduino_FFT_plotter.py
Ba137_hyperfine_hamiltonian_solver/: pyproject.toml
Ba137_hyperfine_hamiltonian_solver/src/ba137_hyperfine_hamiltonian_solver/: __init__.py
Bussed_qubit_ramsey_phase_scans/: Bused_T2_times_log.txt  Bused_T2_times_log_chirpped.txt  Bused_T2_times_log_good_plot.txt
Calibration_data_analysis/: 2pt_cali_analysis.ipynb  sensitivity_matrix_4p2095G.mat
DS_instruments_connect/: DS_connect.ipynb
Fast_Ramsey_calibrations/: Fast_Ramsey_calibraions.ipynb
GPU_benchmark/: gpu_benchmark.ipynb  gpu_benchmark_v2.ipynb
Hamiltonian_Solver/: Hamiltonian_solver.ipynb  Hamiltonian_solver.py  Hamiltonian_solver_NB.ipynb  MagSen_and_transStrength.ipynb
Ion_Control_scripts/: RFSoC_FastRamsey_Calibration.py
LineSignal_charaterization/: Fitting_detunings.ipynb  LineSignal_charaterization.ipynb  Line_signal_charaterization_with_qubitRamsey.ipynb  bussed_ramsey_analysis.ipynb  fit_phase_results.txt  line_signal_fit_params.txt  phase_offsets_data.txt
Line_noise_phase_correction/: Phase_accumulation_sim.ipynb  phase_correction.ipynb
Plotting_ramsey_phase_scans/: read_and_plot.ipynb
RFSoC_control_server_call/: senb_tables.ipynb
RFSoC_phase_plotter/: plotter.ipynb
Randomized_Benchmarking/: RB_sequence.py  Randomized_benchmarking_sequencer.ipynb
Teams_bot/: arxiv_bot.ipynb  arxiv_bot.py  seen.json
Test/: test.ipynb
Time_resolved_evolutions/: Time_resolved_evolution.ipynb
(+10 files in other folders)
